<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="view">View</string>
    <string name="show">Show</string>
    <string name="menu">Menu</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="given_name">Given name</string>
    <string name="family_name">Family name</string>
    <string name="phone">Phone</string>
    <string name="phone_type">Phone Type</string>
    <string name="email">Email</string>
    <string name="email_type">Email Type</string>
    <string name="select_image">Select Image</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string-array name="views">
        <item>All calls</item>
        <item>Incoming calls</item>
        <item>Outgoing calls</item>
        <item>Missed calls</item>
    </string-array>
	<string-array name="phone_types">
	    <item>Home</item>
	    <item>Mobile</item>
	    <item>Work</item>
	    <item>Work Fax</item>
	    <item>Home Fax</item>
	    <item>Pager</item>
	    <item>Other</item>
	    <item>Custom</item>
	    <item>Callback</item>
	    <item>Car</item>
	    <item>Company Main</item>
	    <item>ISDN</item>
	    <item>Main</item>
	    <item>Other Fax</item>
	    <item>Radio</item>
	    <item>Telex</item>
	    <item>TTY TDD</item>
	    <item>Work Mobile</item>
	    <item>Work Pager</item>
	    <item>Assistant</item>
	    <item>MMS</item>
	</string-array>
	<string-array name="email_types">
	    <item>Home</item>
	    <item>Work</item>
	    <item>Other</item>
	    <item>Mobile</item>
	    <item>Custom</item>
	</string-array>
</resources>