<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="3"
	    android:orientation="vertical">
		    <EditText 
			    android:id="@+id/textview_givenname"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/given_name" />
			<EditText 
			    android:id="@+id/textview_familyname"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/family_name" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="7"
	    android:orientation="vertical">
			<Button 
			    android:id="@+id/selectimage_button"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:text="@string/select_image" />
	</LinearLayout>
</LinearLayout>