<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:orientation="vertical">
	    <TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/email" />
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
		        <Spinner 
					android:id="@+id/emailtypespinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:drawSelectorOnTop="true"
					android:prompt="@string/email_type" />
		        <EditText 
		            android:id="@+id/emailaddress"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/email" />
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=" "/>
	    <Button 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/add"/>
	</LinearLayout>
</LinearLayout>